--- a/frontEnd-side/portApp/src/app/components/components/login/login.component.html
+++ b/frontEnd-side/portApp/src/app/components/components/login/login.component.html
@@ -1,1 +1,29 @@
-<p>login works!</p>
+<div class="row">
+    <div class="col-md-12">
+           <div class="card">
+                 <div class="card-header bg-primary text-center text-white">
+                     Login Page
+                 </div>
+                 <div class="card-body">
+
+                    <div class="row form-group">
+                          <label for="username" class=" col-sm-2 col-form-label">Username</label>
+                          <div class="col-sm-10">
+                            <input type="text" class="form-control" placeholder="Insert you Username">
+                          </div>
+                    </div>
+
+                    <div class="row form-group">
+                        <label for="pasword" class=" col-sm-2 col-form-label">Password</label>
+                        <div class="col-sm-10">
+                          <input type="password" class="form-control" placeholder="Insert you Password">
+                        </div>
+                  </div>
+                  <div class="row form-group">
+                    <button class="btn btn-outline-primary btn-block">Login</button>
+                </div>
+
+                 </div>
+           </div>
+    </div>
+</div>
