--- a/frontEnd-side/portApp/src/app/app.component.html
+++ b/frontEnd-side/portApp/src/app/app.component.html
@@ -1,4 +1,4 @@
 <div class="container">
-  <app-login></app-login>
+  <!-- <app-login></app-login> -->
   <app-register-users></app-register-users>
 </div>
