--- a/frontEnd-side/portApp/src/app/app.component.html
+++ b/frontEnd-side/portApp/src/app/app.component.html
@@ -1,4 +1,5 @@
 <div class="container">
-  <app-login></app-login>
+  <app-user-home></app-user-home>
+  <!-- <app-login></app-login> -->
   <!-- <app-register-users></app-register-users> -->
 </div>
