--- a/frontEnd-side/portApp/src/app/view/user-home/user-home.component.html
+++ b/frontEnd-side/portApp/src/app/view/user-home/user-home.component.html
@@ -11,7 +11,7 @@
                   </tr>
                 </thead>
                 <tbody>
-                  <tr *ngFor="let item of users; let i = index">
+                  <tr *ngFor="let item of itemPage; let i = index">
                     <th scope="row">{{i+1}}</th>
                     <td>{{item.username}}</td>
                     <td>{{item.email}}</td>
@@ -19,6 +19,6 @@
                   </tr>
                 </tbody>
               </table>
-
+             <jw-pagination [items]="users" (changePage)="onChangePage($event)"></jw-pagination>
         </div>
 </div>
