--- a/frontEnd-side/portApp/src/app/view/user-home/user-home.component.html
+++ b/frontEnd-side/portApp/src/app/view/user-home/user-home.component.html
@@ -1,7 +1,7 @@
 <div class="row">
         <div class="col-md=12">
 
-            <table class="table table-hover table-bordered" >
+            <table class="table table-hover table-bordered text-center" >
                 <thead>
                   <tr>
                     <th scope="col">#</th>
@@ -15,7 +15,7 @@
                     <th scope="row">{{i+1}}</th>
                     <td>{{item.username}}</td>
                     <td>{{item.email}}</td>
-                    <td [class]="item.status ? 'badge badge-pill badge-success' : 'badge badge-pill badge-danger' "> {{item.status ? 'Active' : 'UnActive'}}</td>
+                    <td [class]="item.status ? 'badge badge-pill badge-success' : 'badge badge-pill badge-danger' " > {{item.status ? 'Active' : 'UnActive'}}</td>
                   </tr>
                 </tbody>
               </table>
